# packages/shared-ui/src/flowHandler/blocks/CompletedBlock.ts
@@ -1,13 +1,13 @@
 import type { AuthType, BlockBody, CorbadoApp, ProcessCommon } from '@corbado/web-core';
-import type { AuthenticationResponse } from '@corbado/web-core/dist/api/v2';
+import type { GeneralBlockCompleted } from '@corbado/web-core/dist/api/v2';
 
 import { BlockTypes, ScreenNames } from '../constants';
 import type { ErrorTranslator } from '../errorTranslator';
 import type { ProcessHandler } from '../processHandler';
 import { Block } from './Block';
 
-export class CompletedBlock extends Block<AuthenticationResponse> {
-  readonly data: AuthenticationResponse;
+export class CompletedBlock extends Block<GeneralBlockCompleted> {
+  readonly data: GeneralBlockCompleted;
   readonly type = BlockTypes.Completed;
   readonly initialScreen = ScreenNames.End;
   readonly authType: AuthType;
@@ -22,6 +22,6 @@ export class CompletedBlock extends Block<AuthenticationResponse> {
     super(app, flowHandler, common, errorTranslator);
 
     this.authType = blockBody.authType;
-    this.data = blockBody.data as AuthenticationResponse;
+    this.data = blockBody.data as GeneralBlockCompleted;
   }
 }
