# packages/web-core/openapi/spec_v2.yaml
@@ -7,7 +7,7 @@ openapi: 3.0.3
 # General                                                         #
 ###################################################################
 info:
-  version: 2.0.0
+  version: 2.0.4
   title: Corbado Frontend API
   description: Overview of all Corbado Frontend API calls to implement passwordless authentication.
   contact:
@@ -611,46 +611,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/processResponse'
 
-  /v2/auth/phone/collect:
-    post:
-      description: tbd
-      operationId: PhoneCollect
-      tags:
-        - Auth
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/phoneCollectReq'
-      responses:
-        '200':
-          description: tbd
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/processResponse'
-
-  /v2/auth/username/collect:
-    post:
-      description: tbd
-      operationId: UsernameCollect
-      tags:
-        - Auth
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/usernameCollectReq'
-      responses:
-        '200':
-          description: tbd
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/processResponse'
-
   /v2/auth/events:
     post:
       description: Creates a new user generated complete event.
@@ -953,7 +913,9 @@ components:
 
     passkeyAppendStartReq:
       type: object
-      description: tbd.
+      properties:
+        clientInformation:
+          $ref: '#/components/schemas/clientInformation'
 
     passkeyAppendFinishReq:
       type: object
@@ -1062,7 +1024,9 @@ components:
 
     passkeyLoginStartReq:
       type: object
-      description: tbd.
+      properties:
+        clientInformation:
+          $ref: '#/components/schemas/clientInformation'
 
     #    passkeyLoginStartRsp:
     #      $ref: '#/components/schemas/blockBody'
@@ -1113,25 +1077,6 @@ components:
           $ref: '#/components/schemas/verificationMethod'
         isNewDevice:
           type: boolean
-
-    usernameCollectReq:
-      type: object
-      required:
-        - value
-      properties:
-        value:
-          type: string
-
-    #    usernameCollectRsp:
-    #      $ref: '#/components/schemas/blockBody'
-
-    phoneCollectReq:
-      type: object
-      required:
-        - value
-      properties:
-        value:
-          type: string
 
     socialVerifyStartReq:
       type: object
@@ -1222,7 +1167,7 @@ components:
         - flags
       properties:
         clientInformation:
-          $ref: '#/components/schemas/clientInformationV2'
+          $ref: '#/components/schemas/clientInformation'
         flags:
           type: object
           additionalProperties:
@@ -1269,6 +1214,8 @@ components:
         loadedMs:
           type: integer
           format: int64
+        loginConnectToken:
+          type: string
 
     connectLoginStartRsp:
       type: object
@@ -1310,7 +1257,7 @@ components:
         - flags
       properties:
         clientInformation:
-          $ref: '#/components/schemas/clientInformationV2'
+          $ref: '#/components/schemas/clientInformation'
         flags:
           type: object
           additionalProperties:
@@ -1392,7 +1339,7 @@ components:
         - flags
       properties:
         clientInformation:
-          $ref: '#/components/schemas/clientInformationV2'
+          $ref: '#/components/schemas/clientInformation'
         flags:
           type: object
           additionalProperties:
@@ -1477,6 +1424,7 @@ components:
         - backupEligible
         - backupState
         - authenticatorAAGUID
+        - aaguidDetails
         - sourceOS
         - sourceBrowser
         - lastUsed
@@ -1514,6 +1462,22 @@ components:
           type: string
           enum: [ 'pending', 'active' ]
           description: "Status"
+        aaguidDetails:
+          $ref: '#/components/schemas/aaguidDetails'
+
+    aaguidDetails:
+      type: object
+      required:
+        - name
+        - iconLight
+        - iconDark
+      properties:
+        name:
+          type: string
+        iconLight:
+          type: string
+        iconDark:
+          type: string
 
     processResponse:
       type: object
@@ -1603,15 +1567,15 @@ components:
           $ref: '#/components/schemas/authType'
         data:
           type: object
-          anyOf:
+          discriminator:
+            propertyName: blockType
+          oneOf:
             - $ref: '#/components/schemas/generalBlockPasskeyAppend'
             - $ref: '#/components/schemas/generalBlockPasskeyVerify'
             - $ref: '#/components/schemas/generalBlockVerifyIdentifier'
             - $ref: '#/components/schemas/generalBlockPasskeyAppended'
             - $ref: '#/components/schemas/generalBlockCompleted'
             - $ref: '#/components/schemas/generalBlockSignupInit'
-            - $ref: '#/components/schemas/generalBlockUsernameCollect'
-            - $ref: '#/components/schemas/generalPhoneCollect'
             - $ref: '#/components/schemas/generalBlockLoginInit'
             - $ref: '#/components/schemas/generalBlockPostSignupEmailVerify'
         alternatives:
@@ -1667,7 +1631,7 @@ components:
 
     blockType:
       type: string
-      enum: [ signup-init, passkey-append, phone-verify, email-verify, passkey-appended, completed, social-verify, username-collect, phone-collect, login-init, passkey-verify, conditional-ui-completed, post-signup-email-verify, passkey-append-after-hybrid ]
+      enum: [ signup-init, passkey-append, phone-verify, email-verify, passkey-appended, completed, social-verify, login-init, passkey-verify, conditional-ui-completed, post-signup-email-verify, passkey-append-after-hybrid ]
 
     authType:
       type: string
@@ -1684,9 +1648,12 @@ components:
     generalBlockSignupInit:
       type: object
       required:
+        - blockType
         - identifiers
         - socialProviders
       properties:
+        blockType:
+          type: string
         identifiers:
           type: array
           items:
@@ -1701,6 +1668,7 @@ components:
     generalBlockLoginInit:
       type: object
       required:
+        - blockType
         - identifierValue
         - isPhone
         - isPhoneAvailable
@@ -1708,6 +1676,8 @@ components:
         - isUsernameAvailable
         - socialData
       properties:
+        blockType:
+          type: string
         conditionalUIChallenge:
           type: string
         identifierValue:
@@ -1727,15 +1697,10 @@ components:
         error:
           $ref: '#/components/schemas/requestError'
 
-    generalBlockUsernameCollect:
-      $ref: '#/components/schemas/loginIdentifierWithError'
-
-    generalPhoneCollect:
-      $ref: '#/components/schemas/loginIdentifierWithError'
-
     generalBlockPasskeyAppend:
       type: object
       required:
+        - blockType
         - challenge
         - identifierValue
         - identifierType
@@ -1743,6 +1708,8 @@ components:
         - passkeyIconSet
         - variant
       properties:
+        blockType:
+          type: string
         challenge:
           type: string
         identifierValue:
@@ -1760,9 +1727,12 @@ components:
     generalBlockPasskeyVerify:
       type: object
       required:
+        - blockType
         - challenge
         - identifierValue
       properties:
+        blockType:
+          type: string
         challenge:
           type: string
         identifierValue:
@@ -1773,9 +1743,28 @@ components:
 
     generalBlockPasskeyAppended:
       type: object
+      required:
+        - blockType
+      properties:
+        blockType:
+          type: string
 
     generalBlockCompleted:
-      $ref: '#/components/schemas/authenticationResponse'
+      type: object
+      required:
+        - blockType
+        - shortSession
+      properties:
+        blockType:
+          type: string
+        longSession:
+          type: string
+          description: Only given when project environment is dev
+        shortSession:
+          type: string
+        passkeyOperation:
+          $ref: '#/components/schemas/passkeyOperation'
+
 
     generalBlockVerifyIdentifier:
       type: object
@@ -1784,7 +1773,10 @@ components:
         - identifier
         - alternativeVerificationMethods
         - isPostLoginVerification
+        - blockType
       properties:
+        blockType:
+          type: string
         verificationMethod:
           $ref: '#/components/schemas/verificationMethod'
         identifier:
@@ -1798,20 +1790,24 @@ components:
           type: array
           items:
             type: object
-          required:
-            - verificationMethod
-            - identifier
-          properties:
-            verificationMethod:
-              $ref: '#/components/schemas/verificationMethod'
-            identifier:
-              type: string
+            required:
+              - verificationMethod
+              - identifier
+            properties:
+              verificationMethod:
+                $ref: '#/components/schemas/verificationMethod'
+              identifier:
+                type: string
         isPostLoginVerification:
           type: boolean
 
     generalBlockPostSignupEmailVerify:
       type: object
+      required:
+        - blockType
       properties:
+        blockType:
+          type: string
         error:
           $ref: '#/components/schemas/requestError'
 
@@ -1835,24 +1831,8 @@ components:
           $ref: '#/components/schemas/clientCapabilities'
         javaScriptHighEntropy:
           $ref: '#/components/schemas/javaScriptHighEntropy'
-
-    clientInformationV2:
-      type: object
-      properties:
-        bluetoothAvailable:
+        isNative:
           type: boolean
-        clientEnvHandle:
-          type: string
-        visitorId:
-          type: string
-        isUserVerifyingPlatformAuthenticatorAvailable:
-          type: boolean
-        isConditionalMediationAvailable:
-          type: boolean
-        clientCapabilities:
-          $ref: '#/components/schemas/clientCapabilities'
-        javaScriptHighEntropy:
-          $ref: '#/components/schemas/javaScriptHighEntropy'
 
     clientCapabilities:
       type: object
@@ -1881,19 +1861,6 @@ components:
           type: string
         mobile:
           type: boolean
-
-    authenticationResponse:
-      type: object
-      required:
-        - shortSession
-      properties:
-        longSession:
-          type: string
-          description: Only given when project environment is dev
-        shortSession:
-          type: string
-        passkeyOperation:
-          $ref: '#/components/schemas/passkeyOperation'
 
     passkeyOperation:
       type: object
